# autonomous-rover

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
autonomous_rover/: yolo_node.py
